--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "id.ac.unpas.showroommobile8"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -64,13 +64,19 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
-//    Menambahkan Dependecies
+//    Menambahkan vvid
+    implementation 'com.benasher44:uuid:0.7.1'
+
+    implementation "androidx.compose.runtime:runtime:1.4.3"
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
+
+//    room
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation "androidx.room:room-runtime:2.5.1"
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
-
-//    Menambahkan vvid
-    implementation 'com.benasher44:uuid:0.7.1'
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
 
 //    live data
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
@@ -83,4 +89,20 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.46.1"
     kaptAndroidTest "com.google.dagger:hilt-compiler:2.46.1"
+
+//    network
+    implementation "com.github.skydoves:sandwich:1.0.9"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
+    implementation "com.squareup.retrofit2:converter-gson:2.1.0"
+    implementation "com.squareup.okhttp3:mockwebserver:4.7.2"
+
+//    whatIf
+    implementation "com.github.skydoves:whatif:1.0.7"
+
+//    compose
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
+//    material dialogs
+    implementation "io.github.vanpra.compose-material-dialogs:core:0.9.0"
+    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.9.0"
 }
